WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
109291
REGGRESSION (
r142112
): It made compositing tests fail on EFL, Qt.
https://bugs.webkit.org/show_bug.cgi?id=109291
Summary
REGGRESSION (r142112): It made compositing tests fail on EFL, Qt.
Ádám Kallai
Reported
2013-02-08 05:50:38 PST
These compositing test started to fail after
r142112
. * compositing/iframes/iframe-composited-scrolling.html Diff is here: --- /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/compositing/iframes/iframe-composited-scrolling-expected.txt +++ /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/compositing/iframes/iframe-composited-scrolling-actual.txt @@ -1,2 +1,2 @@ -PASS +FAIL * compositing/layer-creation/fixed-position-in-view-dynamic.html Diff is here: --- /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/compositing/layer-creation/fixed-position-in-view-dynamic-expected.txt +++ /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/compositing/layer-creation/fixed-position-in-view-dynamic-actual.txt @@ -1,2 +1,2 @@ -PASS +FAIL: Has viewport constrained objects without supporting fixed layers * compositing/layer-creation/fixed-position-out-of-view-dynamic.html Diff is here: --- /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/compositing/layer-creation/fixed-position-out-of-view-dynamic-expected.txt +++ /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/compositing/layer-creation/fixed-position-out-of-view-dynamic-actual.txt @@ -1,2 +1,2 @@ -PASS +FAIL: Has viewport constrained objects without supporting fixed layers * compositing/layer-creation/fixed-position-out-of-view-scroll-reason.html Diff is here: --- /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/compositing/layer-creation/fixed-position-out-of-view-scroll-reason-expected.txt +++ /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/compositing/layer-creation/fixed-position-out-of-view-scroll-reason-actual.txt @@ -1,2 +1,3 @@ Main thread scrolling reasons should be blank: +Has viewport constrained objects without supporting fixed layers * compositing/layer-creation/no-compositing-for-fixed-position-under-transform.html Diff is here: --- /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/compositing/layer-creation/no-compositing-for-fixed-position-under-transform-expected.txt +++ /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/compositing/layer-creation/no-compositing-for-fixed-position-under-transform-actual.txt @@ -15,4 +15,4 @@ ) ) ) - +Has viewport constrained objects without supporting fixed layers Could you check it please?
Attachments
Patch
(12.55 KB, patch)
2013-02-12 03:36 PST
,
Allan Sandfeld Jensen
kenneth
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ádám Kallai
Comment 1
2013-02-08 06:43:43 PST
Two scrollingcoordinator tests failing too. * scrollingcoordinator/non-fast-scrollable-region-scaled-iframe.html --- /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/scrollingcoordinator/non-fast-scrollable-region-scaled-iframe-expected.txt +++ /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/scrollingcoordinator/non-fast-scrollable-region-scaled-iframe-actual.txt @@ -10,3 +10,5 @@ layer at (0,0) size 285x1016 RenderBlock {HTML} at (0,0) size 285x1016 RenderBody {BODY} at (8,8) size 1000x1000 +layer at (62,62) size 300x200 + RenderBlock (positioned) {DIV} at (62,62) size 300x200 [bgcolor=#00FF00] * scrollingcoordinator/non-fast-scrollable-region-transformed-iframe.html --- /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/scrollingcoordinator/non-fast-scrollable-region-transformed-iframe-expected.txt +++ /home/webkitbuildbot/slaves/release64bitWebKit2_EC2/buildslave/qt-linux-64-release-webkit2/build/layout-test-results/scrollingcoordinator/non-fast-scrollable-region-transformed-iframe-actual.txt @@ -10,3 +10,5 @@ layer at (0,0) size 285x1016 RenderBlock {HTML} at (0,0) size 285x1016 RenderBody {BODY} at (8,8) size 1000x1000 +layer at (62,62) size 600x400 + RenderBlock (positioned) {DIV} at (62,62) size 600x400 [bgcolor=#00FF00] It seems this results aren't correct. Could you check these ones too?
Ádám Kallai
Comment 2
2013-02-08 06:53:02 PST
Skipped: <
http://trac.webkit.org/changeset/142274
>
Allan Sandfeld Jensen
Comment 3
2013-02-12 03:22:07 PST
(In reply to
comment #1
)
> Two scrollingcoordinator tests failing too. >
These two just needs to be rebased. They are much closer to the official baseline now than before.
Allan Sandfeld Jensen
Comment 4
2013-02-12 03:36:03 PST
Created
attachment 187825
[details]
Patch
Allan Sandfeld Jensen
Comment 5
2013-03-06 01:50:48 PST
Review?
Allan Sandfeld Jensen
Comment 6
2013-03-06 02:13:20 PST
Committed
r144901
: <
http://trac.webkit.org/changeset/144901
>
Gábor Ábrahám
Comment 7
2013-05-30 05:21:20 PDT
compositing/iframes/iframe-composited-scrolling.html This test now failing on Qt-wk2 could you check it please?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug