REGGRESSION (r142112): It made compositing tests fail on EFL, Qt. https://bugs.webkit.org/show_bug.cgi?id=109291

Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

Report we support fixed layers.

* page/scrolling/coordinatedgraphics/ScrollingCoordinatorCoordinatedGraphics.h:
(WebCore::ScrollingCoordinatorCoordinatedGraphics::supportsFixedPositionLayers):
(ScrollingCoordinatorCoordinatedGraphics):

LayoutTests:

Unskip now passing test, and move baselines specific to having no scrolling-coordinator to WK1.

* platform/qt-5.0-wk1/scrollingcoordinator/non-fast-scrollable-region-scaled-iframe-expected.png: Renamed from LayoutTests/platform/qt/scrollingcoordinator/non-fast-scrollable-region-scaled-iframe-expected.png.
* platform/qt-5.0-wk1/scrollingcoordinator/non-fast-scrollable-region-scaled-iframe-expected.txt: Renamed from LayoutTests/platform/qt/scrollingcoordinator/non-fast-scrollable-region-scaled-iframe-expected.txt.
* platform/qt-5.0-wk1/scrollingcoordinator/non-fast-scrollable-region-transformed-iframe-expected.png: Renamed from LayoutTests/platform/qt/scrollingcoordinator/non-fast-scrollable-region-transformed-iframe-expected.png.
* platform/qt-5.0-wk1/scrollingcoordinator/non-fast-scrollable-region-transformed-iframe-expected.txt: Renamed from LayoutTests/platform/qt/scrollingcoordinator/non-fast-scrollable-region-transformed-iframe-expected.txt.
* platform/qt-5.0-wk2/TestExpectations:

git-svn-id: svn://svn.chromium.org/blink/trunk@144901 bbb929c8-8fbe-4397-9dbb-9b2b20218538