third_party/WebKit/Source/WebCore/page/scrolling/coordinatedgraphics/ScrollingCoordinatorCoordinatedGraphics.h
@@ -37,6 +37,8 @@ class ScrollingCoordinatorCoordinatedGraphics : public ScrollingCoordinator {
 public:
     explicit ScrollingCoordinatorCoordinatedGraphics(Page*);
 
+    virtual bool supportsFixedPositionLayers() const { return true; }
+
     virtual void setLayerIsFixedToContainerLayer(GraphicsLayer*, bool);
 };
 
